CDRA-460[Mobile rendering issue] "Your contribution" box not look good.
[Mobile rendering issue] "Your contribution" box not look good.

--- a/web-app/css/fedu.css
+++ b/web-app/css/fedu.css
@@ -1713,6 +1713,9 @@ textarea.form-control {
 	h1, .h1 {
 	    font-size: 21px;
 	}
+	h3, .h3 {
+	    font-size: 20px;
+	}
 }
 .org-logo{
 	 height:100px; 
